--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-    <section class="logo">logo</section>
+    <section class="logo">
+        <img src="assets/img/logo.png" alt="Minance Logo">
+        <h1>inance</h1>
+    </section>
     <section class="header">header</section>
     <section class="menu">menu</section>
     <section class="metrics">metrics</section>
