--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,13 @@
         <img src="assets/img/logo.png" alt="Minance Logo">
         <h1>inance</h1>
     </section>
-    <section class="header">header</section>
+    <section class="header">
+        <h1>Hi, Rogers</h1>
+        <div class="search">
+            <i class="icon search"></i>
+            <input type="search" placeholder="Search">
+        </div>
+    </section>
     <section class="menu">menu</section>
     <section class="metrics">metrics</section>
     <section class="history">metrics</section>
