fix: use png icons (easier)

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <section class="header">
         <h1>Hi, Rogers</h1>
         <div class="search">
-            <i class="icon search"></i>
+            <img src="assets/icons/search.png" alt="Search Icon">
             <input type="search" placeholder="Search">
         </div>
     </section>
