--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,16 @@
             <input type="search" placeholder="Search">
         </div>
     </section>
-    <section class="menu">menu</section>
+    <section class="menu">
+        <div class="current"><img src="assets/icons/grid-black.png" alt="Grid Icon"><span>Dashboard</span></div>
+        <div><img src="assets/icons/grid.png" alt="Grid Icon"><span>Invoices</span></div>
+        <div><img src="assets/icons/box.png" alt="Box Icon"><span>Clients</span></div>
+        <div><img src="assets/icons/mail.png" alt="Mail Icon"><span>Messages</span></div>
+        <div><img src="assets/icons/gear.png" alt="Gear Icon"><span>Settings</span></div>
+        <div><img src="assets/icons/help.png" alt="Help Icon"><span>Help</span></div>
+    </section>
     <section class="metrics">metrics</section>
-    <section class="history">metrics</section>
+    <section class="history">history</section>
     <section class="sidebar">sidebar</section>
     <section class="logout">logout</section>
 </body>
