--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,8 @@
     <section class="metrics">metrics</section>
     <section class="history">history</section>
     <section class="sidebar">sidebar</section>
-    <section class="logout">logout</section>
+    <section class="logout">
+        <div><img src="assets/icons/logout.png" alt="Log Out Icon"><span>Log Out</span></div>
+    </section>
 </body>
 </html>
