--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
@@ -30,8 +30,23 @@
         <div><img src="assets/icons/mail.png" alt="Mail Icon"><span>Messages</span></div>
         <div><img src="assets/icons/gear.png" alt="Gear Icon"><span>Settings</span></div>
         <div><img src="assets/icons/help.png" alt="Help Icon"><span>Help</span></div>
+    </section> 
+    <section class="metrics">
+        <div class="balance">
+            <h3>Total Balance</h3>
+            <h2>0.97894652 <span class="unit">BTC</span></h2>
+            <h4>$40,123.56</h4>
+        </div>
+        <div class="tabs">
+            <div class="bar">
+                <span class="current">Portfolio</span>
+                <span>Funding</span>
+                <span>Assets</span>
+                <span>P2P</span>
+            </div>
+        </div>
+        <img src="assets/img/graph.png" alt="Temporary Graph" class="graph">
     </section>
-    <section class="metrics">metrics</section>
     <section class="history">history</section>
     <section class="sidebar">sidebar</section>
     <section class="logout">
