--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,48 @@
         </div>
         <img src="assets/img/graph.png" alt="Temporary Graph" class="graph">
     </section>
-    <section class="history">history</section>
+    <section class="history">
+        <div class="header">
+            <h2>Recent Transactions</h2>
+            <h3>See all coins</h3>
+        </div>
+        <div class="transaction">
+            <div class="background"></div>
+            <img class="coin" src="assets/img/coins/bitcoin.png" alt="Bitcoin">
+            <div class="field">
+                <span class="name">Bitcoin</span>
+                <span class="value">BTC</span>
+            </div>
+            <div class="field">
+                <span class="name">Market Cap</span>
+                <span class="value blue">$40,243.70</span>
+            </div>
+            <div class="field">
+                <span class="name">24h change</span>
+                <span class="value green">+1,56</span>
+            </div>
+            <img src="assets/img/curves/flat-1.svg" alt="Flat Curve">
+            <span>Trade</span>
+        </div>
+        <div class="transaction">
+            <div class="background"></div>
+            <img class="coin" src="assets/img/coins/etherum.png" alt="Bitcoin">
+            <div class="field">
+                <span class="name">Etherum</span>
+                <span class="value">ETH</span>
+            </div>
+            <div class="field">
+                <span class="name">Market Cap</span>
+                <span class="value purple">$40,243.70</span>
+            </div>
+            <div class="field">
+                <span class="name">24h change</span>
+                <span class="value red">+1,56</span>
+            </div>
+            <img src="assets/img/curves/flat-2.svg" alt="Flat Curve">
+            <span>Trade</span>
+    </div>
+    </section>
     <section class="sidebar">sidebar</section>
     <section class="logout">
         <div><img src="assets/icons/logout.png" alt="Log Out Icon"><span>Log Out</span></div>
