--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,10 @@
             <span>Trade</span>
     </div>
     </section>
+    <section class="account">
+        <img src="assets/icons/bell.png" alt="Bell Icon">
+        <img src="assets/img/profile-picture.png" alt="Profile Picture">
+    </section>
     <section class="sidebar">sidebar</section>
     <section class="logout">
         <div><img src="assets/icons/logout.png" alt="Log Out Icon"><span>Log Out</span></div>
