--- a/www/index.html
+++ b/www/index.html
@@ -55,15 +55,15 @@
         <div class="transaction">
             <div class="background"></div>
             <img class="coin" src="assets/img/coins/bitcoin.png" alt="Bitcoin">
-            <div class="field">
+            <div class="field first">
                 <span class="name">Bitcoin</span>
                 <span class="value">BTC</span>
             </div>
-            <div class="field">
+            <div class="field second">
                 <span class="name">Market Cap</span>
                 <span class="value blue">$40,243.70</span>
             </div>
-            <div class="field">
+            <div class="field third">
                 <span class="name">24h change</span>
                 <span class="value green">+1,56</span>
             </div>
@@ -73,15 +73,15 @@
         <div class="transaction">
             <div class="background"></div>
             <img class="coin" src="assets/img/coins/etherum.png" alt="Bitcoin">
-            <div class="field">
+            <div class="field first">
                 <span class="name">Etherum</span>
                 <span class="value">ETH</span>
             </div>
-            <div class="field">
+            <div class="field second">
                 <span class="name">Market Cap</span>
                 <span class="value purple">$40,243.70</span>
             </div>
-            <div class="field">
+            <div class="field third">
                 <span class="name">24h change</span>
                 <span class="value red">+1,56</span>
             </div>
@@ -95,47 +95,50 @@
     </section>
     <section class="sidebar">
         <h2>Recent Transactions</h2>
-        <div class="transaction">
-            <img src="assets/img/coins/usdt.png" alt="USDT Coin">
-            <div class="field"><span class="name">Usdt</span><span class="value">Recieved</span></div>
-            <div class="field"><span class="name green">+$3,546</span><span class="value">Today, 13:45 pm</span></div>
-        </div>
-        <div class="transaction">
-            <img src="assets/img/coins/binance.png" alt="Binance Coin">
-            <div class="field"><span class="name">BNB</span><span class="value">Buy</span></div>
-            <div class="field"><span class="name green">+ 0.7546</span><span class="value">Today, 5:45 pm</span></div>
-        </div>
-        <div class="transaction">
-            <img src="assets/img/coins/lite.png" alt="Lite Coin">
-            <div class="field"><span class="name">Lite Coin</span><span class="value">Withdrawal</span></div>
-            <div class="field"><span class="name red">+ 0.7546</span><span class="value">Today 7:55 am</span></div>
-        </div>
-        <div class="transaction">
-            <img src="assets/img/coins/bitcoin-alt.png" alt="Bitcoin Coin">
-            <div class="field"><span class="name">Bitcoin</span><span class="value">Recieved</span></div>
-            <div class="field"><span class="name green">+ 2.7546</span><span class="value">Today 8:55 am</span></div>
-        </div>
-        <div class="transaction">
-            <img src="assets/img/coins/etherum-alt.png" alt="Etherum Coin">
-            <div class="field"><span class="name">Etherum</span><span class="value">Recieved</span></div>
-            <div class="field"><span class="name green">+ 1.646</span><span class="value">Today 10:02 am</span></div>
-        </div>
-        <h2>Assets</h2>
-        <div class="asset gradient-1">
-            <img src="assets/img/coins/bitcoin-white.png" alt="Bitcoin Coin">
-            <h4>Bitcoin</h4>
-            <div class="row">
-                <h3>121,6450.45</h3>
-                <h3>BTC</h3>
+        <div class="transactions">
+            <div class="transaction">
+                <img src="assets/img/coins/usdt.png" alt="USDT Coin">
+                <div class="field"><span class="name">Usdt</span><span class="value">Recieved</span></div>
+                <div class="field"><span class="name green">+$3,546</span><span class="value">Today, 13:45 pm</span></div>
+            </div>
+            <div class="transaction">
+                <img src="assets/img/coins/binance.png" alt="Binance Coin">
+                <div class="field"><span class="name">BNB</span><span class="value">Buy</span></div>
+                <div class="field"><span class="name green">+ 0.7546</span><span class="value">Today, 5:45 pm</span></div>
+            </div>
+            <div class="transaction">
+                <img src="assets/img/coins/lite.png" alt="Lite Coin">
+                <div class="field"><span class="name">Lite Coin</span><span class="value">Withdrawal</span></div>
+                <div class="field"><span class="name red">+ 0.7546</span><span class="value">Today 7:55 am</span></div>
+            </div>
+            <div class="transaction">
+                <img src="assets/img/coins/bitcoin-alt.png" alt="Bitcoin Coin">
+                <div class="field"><span class="name">Bitcoin</span><span class="value">Recieved</span></div>
+                <div class="field"><span class="name green">+ 2.7546</span><span class="value">Today 8:55 am</span></div>
+            </div>
+            <div class="transaction">
+                <img src="assets/img/coins/etherum-alt.png" alt="Etherum Coin">
+                <div class="field"><span class="name">Etherum</span><span class="value">Recieved</span></div>
+                <div class="field"><span class="name green">+ 1.646</span><span class="value">Today 10:02 am</span></div>
             </div>
         </div>
-
-        <div class="asset gradient-2">
-            <img src="assets/img/coins/etherum-black.png" alt="Bitcoin Coin">
-            <h4>Etherum</h4>
-            <div class="row">
-                <h3>121,6450.45</h3>
-                <h3>ETH</h3>
+        <h2>Assets</h2>
+        <div class="assets">
+            <div class="asset gradient-1">
+                <img src="assets/img/coins/bitcoin-white.png" alt="Bitcoin Coin">
+                <h4>Bitcoin</h4>
+                <div class="row">
+                    <h3>121,6450.45</h3>
+                    <h3>BTC</h3>
+                </div>
+            </div>
+            <div class="asset gradient-2">
+                <img src="assets/img/coins/etherum-black.png" alt="Bitcoin Coin">
+                <h4>Etherum</h4>
+                <div class="row">
+                    <h3>121,6450.45</h3>
+                    <h3>ETH</h3>
+                </div>
             </div>
         </div>
     </section>
